[package]
name = "badger"
version = "0.2.1"
authors = ["Maciej Hirsz <maciej.hirsz@gmail.com>"]
license = "MIT"
description = "JavaScript transpiler in Rust"
repository = "https://github.com/HoneyBadger-rust/HoneyBadger"
documentation = "https://github.com/HoneyBadger-rust/HoneyBadger"

[dependencies]
docopt = "0.6.78"
rustc-serialize = "0.3.16"
itoa = "0.1.1"
