[package]
name = "ratel"
version = "0.2.3"
authors = ["Maciej Hirsz <maciej.hirsz@gmail.com>"]
license = "MIT"
description = "JavaScript transpiler in Rust"
repository = "https://github.com/ratel-rust/ratel-core"
documentation = "https://github.com/ratel-rust/ratel-core"

[dependencies]
docopt = "0.6.78"
rustc-serialize = "0.3.16"
itoa = "0.1.1"
