[package]
name = "ratel"
version = "0.7.0"
authors = ["Maciej Hirsz <maciej.hirsz@gmail.com>"]
license = "MIT/Apache-2.0"
description = "JavaScript transpiler in Rust"
repository = "https://github.com/ratel-rust/ratel-core"
documentation = "https://github.com/ratel-rust/ratel-core"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
pretty_assertions = "0.4.0"

[dev-dependencies]

[dependencies.serde_json]
version = "1.0"
features = ["preserve_order"]
