[package]
name = "ratel"
version = "0.7.0"
authors = ["Maciej Hirsz <maciej.hirsz@gmail.com>"]
license = "MIT/Apache-2.0"
description = "JavaScript transpiler in Rust"
repository = "https://github.com/ratel-rust/ratel-core"
documentation = "https://github.com/ratel-rust/ratel-core"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
toolshed = { version = "0.2", features = ["impl_serialize"] }

[dev-dependencies]
pretty_assertions = "0.4.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
