[package]
name = "ffi"
version = "0.0.1"
authors = ["Matthias Thoemmes <thoemmes@gmail.com>"]
license = "MIT"
build = "build.rs"

[lib]
name = "ffi"
crate-type = ["dylib"]
path = "src/lib.rs"

[build-dependencies]
neon-build = "0.1.22"

[dependencies.ratel]
path = "../../core"

[dependencies]
# neon = "0.1.22"
neon = { git = "https://github.com/maciejhirsz/neon.git", default-features = false }
serde = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_derive = "1.0"

[profile.release]
lto = true

[profile.bench]
lto = true
